--- a/expeiment7.css
+++ b/expeiment7.css
@@ -23,7 +23,7 @@ body{
     color: white;
     background-color: #9b59b6;
     margin: 10px;
-    padding: 1opx;
+    padding: 11px;
 }
 .float_example a{
     text-decoration: none;
